welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/DisabilityCard__c.object-meta.xml
<CustomObject>
    <label>受給者証</label>
    <nameField>
        <displayFormat>受給者証_{00000}</displayFormat>
        <label>受給者証コード</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>