welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/CertPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>CertPeriodEnd__c</fullName>
    <label>受給者証認定期間：終了日</label>
    <type>Date</type>
</CustomField>