welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/CertPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>CertPeriodStart__c</fullName>
    <label>受給者証認定期間：開始日</label>
    <type>Date</type>
</CustomField>