welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <label>契約支給量終了日</label>
    <type>Date</type>
</CustomField>