welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/ContractRowNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractRowNumber__c</fullName>
    <label>契約記入欄番号</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>