welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <label>契約支給量開始日</label>
    <type>Date</type>
</CustomField>