welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>契約形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>契約</fullName>
            </value>
            <value>
                <fullName>措置</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>