welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>利用者</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>受給者証</relationshipLabel>
    <relationshipName>l5n5</relationshipName>
    <type>Lookup</type>
</CustomField>