welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <formula>Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>利用者氏名</label>
    <type>Text</type>
</CustomField>