welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>交付年月日</label>
    <type>Date</type>
</CustomField>