welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/DisabilityCard_ID18__c.field-meta.xml
<CustomField>
    <fullName>DisabilityCard_ID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受給者証_ID18</label>
    <type>Text</type>
</CustomField>