welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/DisabilityCardFolder__c.field-meta.xml
<CustomField>
    <fullName>DisabilityCardFolder__c</fullName>
    <label>受給者証フォルダ</label>
    <type>Url</type>
</CustomField>