welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/DisabilityCategory__c.field-meta.xml
<CustomField>
    <fullName>DisabilityCategory__c</fullName>
    <label>障害支援区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>非該当</fullName>
            </value>
            <value>
                <fullName>区分1</fullName>
            </value>
            <value>
                <fullName>区分2</fullName>
            </value>
            <value>
                <fullName>区分3</fullName>
            </value>
            <value>
                <fullName>区分4</fullName>
            </value>
            <value>
                <fullName>区分5</fullName>
            </value>
            <value>
                <fullName>区分6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>