welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/DisabilityCategoryEnd__c.field-meta.xml
<CustomField>
    <fullName>DisabilityCategoryEnd__c</fullName>
    <label>障害区分：終了日</label>
    <type>Date</type>
</CustomField>