welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/DisabilityCategoryStart__c.field-meta.xml
<CustomField>
    <fullName>DisabilityCategoryStart__c</fullName>
    <label>障害区分：開始日</label>
    <type>Date</type>
</CustomField>