welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/FacilityPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>FacilityPaymentAmount__c</fullName>
    <label>施設入所支援支給額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>