welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/Furigana__c.field-meta.xml
<CustomField>
    <fullName>Furigana__c</fullName>
    <formula>Customer__r.Furigana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ふりがな</label>
    <type>Text</type>
</CustomField>