welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/GHPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>GHPaymentAmount__c</fullName>
    <label>共同生活援助又は重度障害者等包括支援支給額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>