welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/GuardianFurigana__c.field-meta.xml
<CustomField>
    <fullName>GuardianFurigana__c</fullName>
    <label>保護者氏名かな</label>
    <length>200</length>
    <type>Text</type>
</CustomField>