welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/GuardianName__c.field-meta.xml
<CustomField>
    <fullName>GuardianName__c</fullName>
    <inlineHelpText>通所受給者証のみ</inlineHelpText>
    <label>保護者氏名</label>
    <length>200</length>
    <type>Text</type>
</CustomField>