welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/JukyuNumber__c.field-meta.xml
<CustomField>
    <fullName>JukyuNumber__c</fullName>
    <inlineHelpText>10桁以下の半角数字で入力</inlineHelpText>
    <label>受給者証番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>