welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/JukyuNumber_system__c.field-meta.xml
<CustomField>
    <fullName>JukyuNumber_system__c</fullName>
    <label>受給者証番号_system</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>