welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/Monitoring11MonthLater__c.field-meta.xml
<CustomField>
    <fullName>Monitoring11MonthLater__c</fullName>
    <label>モニタリング：11か月後</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>〇手</fullName>
            </value>
            <value>
                <fullName>〇終</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>