welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/MonitoringPeriod__c.field-meta.xml
<CustomField>
    <fullName>MonitoringPeriod__c</fullName>
    <label>モニタリング期間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1ヶ月</fullName>
            </value>
            <value>
                <fullName>2ヶ月</fullName>
            </value>
            <value>
                <fullName>3ヶ月</fullName>
            </value>
            <value>
                <fullName>4ヶ月</fullName>
            </value>
            <value>
                <fullName>5ヶ月</fullName>
            </value>
            <value>
                <fullName>6ヶ月</fullName>
            </value>
            <value>
                <fullName>7ヶ月</fullName>
            </value>
            <value>
                <fullName>8ヶ月</fullName>
            </value>
            <value>
                <fullName>9ヶ月</fullName>
            </value>
            <value>
                <fullName>10ヶ月</fullName>
            </value>
            <value>
                <fullName>11ヶ月</fullName>
            </value>
            <value>
                <fullName>12ヶ月</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>