welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/MonitoringTiming__c.field-meta.xml
<CustomField>
    <fullName>MonitoringTiming__c</fullName>
    <label>モニタリング時期</label>
    <length>100</length>
    <type>Text</type>
</CustomField>