welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/MonthlyAllotmentDays__c.field-meta.xml
<CustomField>
    <fullName>MonthlyAllotmentDays__c</fullName>
    <label>月間支給量（日数）</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>