welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/MunicipalityMaster__c.field-meta.xml
<CustomField>
    <fullName>MunicipalityMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>支給市町村</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>自治体マスタ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>受給者証</relationshipLabel>
    <relationshipName>EZwg</relationshipName>
    <type>Lookup</type>
</CustomField>