welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/MunicipalityMasterCityNumber__c.field-meta.xml
<CustomField>
    <fullName>MunicipalityMasterCityNumber__c</fullName>
    <formula>MunicipalityMaster__r.MunicipalityMasterCityNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>市町村番号</label>
    <type>Text</type>
</CustomField>