welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/MunicipalityMasterName__c.field-meta.xml
<CustomField>
    <fullName>MunicipalityMasterName__c</fullName>
    <formula>MunicipalityMaster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支給市町村名</label>
    <type>Text</type>
</CustomField>