welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/SupportEnd__c.field-meta.xml
<CustomField>
    <fullName>SupportEnd__c</fullName>
    <label>相談支援：終了日</label>
    <type>Date</type>
</CustomField>