welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/SupportStart__c.field-meta.xml
<CustomField>
    <fullName>SupportStart__c</fullName>
    <label>相談支援：開始日</label>
    <type>Date</type>
</CustomField>