welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>MID ( TEXT ( DeliveryDate__c )  , 1 , 4 ) &amp; &quot;/&quot; &amp;
MID ( TEXT ( DeliveryDate__c  )  , 6 , 2 ) &amp; &quot;_&quot; &amp;
 Customer__r.Name   &amp; &quot;_&quot; &amp;
( IF ( ISBLANK ( TEXT ( Type__c )) , &quot;受給者証&quot; , TEXT ( Type__c ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>タイトル</label>
    <type>Text</type>
</CustomField>