welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>障害福祉サービス受給者証</fullName>
            </value>
            <value>
                <fullName>障害児通所受給者証</fullName>
            </value>
            <value>
                <fullName>地域生活支援事業受給者証</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>