welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/UpperLimitAmount__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitAmount__c</fullName>
    <label>負担上限月額</label>
    <length>10</length>
    <type>Text</type>
</CustomField>