welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/UpperLimitAmount_system__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitAmount_system__c</fullName>
    <label>負担上限月額_system</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>