welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/UpperLimitFacilityName__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitFacilityName__c</fullName>
    <label>上限額管理事業所名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>