welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/UpperLimitFacilityNumber__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitFacilityNumber__c</fullName>
    <label>上限額管理事業所番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>