welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/UpperLimitMgmt__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitMgmt__c</fullName>
    <label>上限管理</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>