welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/UpperLimitResult__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitResult__c</fullName>
    <label>上限額管理結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1（管理事業所で利用者負担額を充当）</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2（利用者負担合計額が負担上限月額以下）</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3（利用者負担合計額が負担上限月額を超過）</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4（他事業所で利用者負担を充当）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>