welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/UserChargeEnd__c.field-meta.xml
<CustomField>
    <fullName>UserChargeEnd__c</fullName>
    <label>利用負担：終了日</label>
    <type>Date</type>
</CustomField>