welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/UserChargeStart__c.field-meta.xml
<CustomField>
    <fullName>UserChargeStart__c</fullName>
    <label>利用負担：開始日</label>
    <type>Date</type>
</CustomField>