welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/fields/Valid__c.field-meta.xml
<CustomField>
    <fullName>Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>