welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/validationRules/JukyuNumber_Hankaku.validationRule-meta.xml
<ValidationRule>
    <fullName>JukyuNumber_Hankaku</fullName>
    <active>true</active>
    <description>受給者証番号は半角数字で入力</description>
    <errorConditionFormula>NOT (  REGEX ( JukyuNumber__c, &quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>JukyuNumber__c</errorDisplayField>
    <errorMessage>受給者証番号は半角数字で入力してください。</errorMessage>
</ValidationRule>