welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/validationRules/UpperLimit_Hankaku.validationRule-meta.xml
<ValidationRule>
    <fullName>UpperLimit_Hankaku</fullName>
    <active>true</active>
    <description>負担上限月額はカンマなしの半角数字で入力</description>
    <errorConditionFormula>IF ( ISBLANK ( UpperLimitAmount__c ) , False , 
OR ( NOT (  REGEX ( UpperLimitAmount__c , &quot;^[0-9]*$&quot;))))</errorConditionFormula>
    <errorDisplayField>UpperLimitAmount__c</errorDisplayField>
    <errorMessage>負担上限月額はカンマなしの半角数字で入力してください。</errorMessage>
</ValidationRule>