welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/validationRules/UpperLimitFacilityNumber_Hankaku.validationRule-meta.xml
<ValidationRule>
    <fullName>UpperLimitFacilityNumber_Hankaku</fullName>
    <active>true</active>
    <description>上限額管理事業所番号は半角数字10桁で入力（任意項目、空欄は許容）</description>
    <errorConditionFormula>IF ( ISBLANK ( UpperLimitFacilityNumber__c ) , False ,
OR ( NOT ( REGEX ( UpperLimitFacilityNumber__c , &quot;^[0-9]{10}$&quot;))))</errorConditionFormula>
    <errorDisplayField>UpperLimitFacilityNumber__c</errorDisplayField>
    <errorMessage>上限額管理事業所番号は半角数字10桁で入力してください。</errorMessage>
</ValidationRule>