welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Customer__c</columns>
    <columns>Type__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>JukyuNumber__c</columns>
    <columns>MunicipalityMaster__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>