welfare-pdca/sf-deploy/force-app/main/default/objects/DisabilityCard__c/listViews/DisabilityCard_CommunitySupport.listView-meta.xml
<ListView>
    <fullName>DisabilityCard_CommunitySupport</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Customer__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>JukyuNumber__c</columns>
    <columns>MunicipalityMaster__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>地域生活支援事業受給者証</value>
    </filters>
    <label>地域生活支援事業受給者証</label>
</ListView>